# systemd-cecile-proxy

./: Cargo.toml
src/: daemon.rs  event.rs  journal.rs  main.rs
