[package]
name = "systemd-cecile-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
systemd_v247 = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
libsystemd-sys = { version = "0.9.3", default-features = false, features = ["journal"] }
